--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -26,5 +26,10 @@
 			<artifactId>hermes-merchant</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.source3g.hermes</groupId>
+			<artifactId>hermes-device</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
