1、增加导入顾客的文件上传功能  2、记录导入日志  3、发送导入顾客消息  4、接收导入顾客消息

--- a/hermes/hermes-api-common/pom.xml
+++ b/hermes/hermes-api-common/pom.xml
@@ -8,21 +8,22 @@
 		<artifactId>hermes-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hermes-merchant</artifactId>
-	<name>hermes-merchant</name>
+	<artifactId>hermes-api-common</artifactId>
+	<name>hermes-api-common</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.source3g.hermes</groupId>
-			<artifactId>hermes-common</artifactId>
-			<version>${project.version}</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.source3g.hermes</groupId>
-			<artifactId>hermes-api-common</artifactId>
+			<artifactId>hermes-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
