--- a/hermes/hermes-device/pom.xml
+++ b/hermes/hermes-device/pom.xml
@@ -17,7 +17,12 @@
     <dependency>
     	<groupId>com.source3g.hermes</groupId>
     	<artifactId>hermes-common</artifactId>
-    	<version>0.0.1-SNAPSHOT</version>
+    	<version>${project.version}</version>
+    </dependency>
+    <dependency>
+    	<groupId>com.source3g.hermes</groupId>
+    	<artifactId>hermes-api-common</artifactId>
+    	<version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
