--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -14,6 +14,7 @@
 		<module>hermes-common</module>
    		 <module>hermes-merchant</module>
     <module>hermes-device</module>
+    <module>hermes-api-common</module>
   </modules>
 	<build>
 		<finalName>${project.name}</finalName>
@@ -268,16 +269,12 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>20030211.134440</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>1.8.3</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
-			<version>20041127.091804</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-collections</groupId>
@@ -290,13 +287,6 @@
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 			<version>1.6</version>
-			<type>jar</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>commons-dbcp</groupId>
-			<artifactId>commons-dbcp</artifactId>
-			<version>20030825.184428</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
@@ -318,16 +308,12 @@
 		<dependency>
 			<groupId>commons-httpclient</groupId>
 			<artifactId>commons-httpclient</artifactId>
-			<version>20020423</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>20030203.000550</version>
-			<type>jar</type>
-			<scope>compile</scope>
+			<version>2.4</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang</groupId>
