增加任务同步功能，增加跟据电话查询顾客API

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -1,2 +1,5 @@
 temp.import.log.dir=D:/temp/
+task.package.dir=D:/task/
 sync.increment.cron=0 */3 * * * *
+local.url=http://localhost:8080/hermes-api/
+task.redelivery.count=3
