--- a/hermes/hermes-message/pom.xml
+++ b/hermes/hermes-message/pom.xml
@@ -8,8 +8,8 @@
 		<artifactId>hermes-parent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>hermes-sync</artifactId>
-	<name>hermes-sync</name>
+	<artifactId>hermes-message</artifactId>
+	<name>hermes-message</name>
 	<url>http://maven.apache.org</url>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -24,17 +24,6 @@
 			<groupId>com.source3g.hermes</groupId>
 			<artifactId>hermes-api-common</artifactId>
 			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-compress</artifactId>
-			<version>1.4.1</version>
 		</dependency>
 	</dependencies>
 </project>
