--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -42,5 +42,10 @@
 			<artifactId>hermes-sync</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.source3g.hermes</groupId>
+			<artifactId>hermes-message</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
