--- a/hermes/hermes-web/src/main/resources/ValidationMessages.properties
+++ b/hermes/hermes-web/src/main/resources/ValidationMessages.properties
@@ -12,3 +12,5 @@ merchant.name.not.null=\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a
 merchant.addr.not.null=\u5730\u5740\u4e0d\u80fd\u4e3a\u7a7a
 merchant.account.not.null=\u8d26\u53f7\u4e0d\u80fd\u4e3a\u7a7a
 merchant.password.not.null=\u5bc6\u7801\u4e0d\u80fd\u4e3a\u7a7a
+message.template.title.not.empty=\u77ed\u4fe1\u6a21\u677f\u6807\u9898\u4e0d\u80fd\u4e3a\u7a7a
+message.template.content.not.empty=\u77ed\u4fe1\u6a21\u677f\u5185\u5bb9\u4e0d\u80fd\u4e3a\u7a7a
