--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -1,5 +1,5 @@
 temp.import.log.dir=D:/temp/
 task.package.dir=D:/task/
 sync.increment.cron=0 */3 * * * *
-local.url=http://localhost:8080/hermes-api/
+local.url=http://192.168.0.113:8080/hermes-api/
 task.redelivery.count=3
