--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -4,3 +4,14 @@ customer.export.temp.dir=D:/customer/
 sync.increment.cron=0 */1 * * * *
 local.url=http://192.168.0.113:8080/hermes-api/
 task.redelivery.count=3
+
+#\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
+message.ip=60.28.194.246
+message.name=Q3h2O6XY
+message.pass=ATN2XX5Y
+message.msgcode=15
+message.itemid=10253901
+message.msgid=03251325236560000009
+message.gatename.cm=mobile0025
+message.gatename.cm.spnumber=10660025
+message.gatename.cu=unicomgzDXYD
