--- a/hermes/hermes-web/src/main/resources/mongo.properties
+++ b/hermes/hermes-web/src/main/resources/mongo.properties
@@ -1,6 +1,6 @@
 mongo.host=localhost
 mongo.port=27017
-mongo.dbname=testmongo
+mongo.dbname=wcb-security
 mongo.name=root
 mongo.pass=1234
 mongo.connectionsPerHost=20
