--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -2,7 +2,7 @@ temp.import.log.dir=D:/temp/
 task.package.dir=D:/task/
 customer.export.temp.dir=D:/customer/
 sync.increment.cron=0 */1 * * * *
-local.url=http://192.168.0.113:8080/hermes-api/
+local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
 
 #\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
