修改HXPUBAPI。jar的引用方式， mvn install:install-file -Dfile=message项目中lib下HXPUBAPI.jar的绝对路径 -DgroupId=com.hongxun
-DartifactId=pub -Dversion=1.0 -Dpackaging=jar

--- a/hermes/hermes-message/pom.xml
+++ b/hermes/hermes-message/pom.xml
@@ -25,5 +25,17 @@
 			<artifactId>hermes-api-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+
+
+		<dependency>
+			<groupId>com.hongxun</groupId>
+			<artifactId>pub</artifactId>
+			<version>1.0</version>
+			<!-- <systemPath>${basedir}/lib/HXPUBAPI.jar</systemPath> -->
+		</dependency>
+		
 	</dependencies>
+
+	<build>
+	</build>
 </project>
