权限换到API中

--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -52,5 +52,10 @@
 			<artifactId>hermes-dictionary</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.source3g.hermes</groupId>
+			<artifactId>hermes-security</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
