--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -2,6 +2,7 @@ temp.import.log.dir=D:/temp/
 task.package.dir=D:/task/
 customer.export.temp.dir=D:/customer/
 sync.increment.cron=0 */1 * * * *
+remind.birthday.cron=0 0 1 * * *
 local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
 
