--- a/hermes/hermes-web/src/main/resources/ValidationMessages.properties
+++ b/hermes/hermes-web/src/main/resources/ValidationMessages.properties
@@ -16,3 +16,5 @@ message.template.title.not.empty=\u77ed\u4fe1\u6a21\u677f\u6807\u9898\u4e0d\u80f
 message.template.content.not.empty=\u77ed\u4fe1\u6a21\u677f\u5185\u5bb9\u4e0d\u80fd\u4e3a\u7a7a
 resource.name.not.empty=\u8d44\u6e90\u540d\u79f0\u4e0d\u80fd\u4e3a\u7a7a
 resource.code.not.empty=\u8d44\u6e90\u4ee3\u7801\u4e0d\u80fd\u4e3a\u7a7a
+remind.template.title.not.null=\u63d0\u9192\u6a21\u677f\u6807\u9898\u4e0d\u80fd\u4e3a\u7a7a
+remind.template.content.not.null=\u63d0\u9192\u6a21\u677f\u5185\u5bb9\u4e0d\u80fd\u4e3a\u7a7a
