--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -62,5 +62,10 @@
 			<artifactId>hermes-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.source3g.hermes</groupId>
+			<artifactId>hermes-monitor</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
