--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -18,4 +18,4 @@ log4j.appender.source3g.MaxFileSize=100MB
 log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
 log4j.appender.source3g.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
 
-log4j.logger.org.springframework.web=debug
+log4j.logger.org.springframework.web=ERROR
