--- a/hermes/hermes-monitor/pom.xml
+++ b/hermes/hermes-monitor/pom.xml
@@ -11,4 +11,12 @@
 	<description>monitor jms</description>
 
 
+	<dependencies>
+
+	<dependency>
+		<groupId>com.source3g.hermes</groupId>
+		<artifactId>hermes-common</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+	</dependencies>
 </project>
