--- a/hermes/hermes-web/src/main/resources/mongo.properties
+++ b/hermes/hermes-web/src/main/resources/mongo.properties
@@ -1,8 +1,8 @@
 mongo.host=localhost
 mongo.port=27017
 mongo.dbname=wcb-security
-mongo.name=root
-mongo.pass=1234
+mongo.name=testmongo
+mongo.pass=5da6c87t2d!
 mongo.connectionsPerHost=20
 #\u7ebf\u7a0b\u961f\u5217\u6570
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
