短信发送失败列表

--- a/hermes/hermes-web/src/main/resources/mongo.properties
+++ b/hermes/hermes-web/src/main/resources/mongo.properties
@@ -2,7 +2,7 @@ mongo.host=localhost
 mongo.port=27017
 mongo.dbname=wcb-security
 mongo.name=testmongo
-mongo.pass=5da6c87t2d!
+mongo.pass=1234
 mongo.connectionsPerHost=20
 #\u7ebf\u7a0b\u961f\u5217\u6570
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
