--- a/hermes/hermes-api/src/main/resources/mongo.properties
+++ b/hermes/hermes-api/src/main/resources/mongo.properties
@@ -1,9 +1,11 @@
-mongo.host=localhost
-#mongo.host=192.168.1.102
+#mongo.host=localhost
+mongo.host=58.68.229.178
 mongo.port=27017
 mongo.dbname=testmongo
 mongo.name=testmongo
-mongo.pass=5da6c87t2d!
+mongo.pass=1234
+#mongo.pass=5da6c87t2d!
+#mongo.pass=5da6c87t2d!
 mongo.connectionsPerHost=20
 #\u7ebf\u7a0b\u961f\u5217\u6570
 mongo.threadsAllowedToBlockForConnectionMultiplier=4
