--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -13,7 +13,9 @@ message.name=Q3h2O6XY
 message.pass=ATN2XX5Y
 message.msgcode=15
 message.itemid=10253901
-message.msgid=03251325236560000009
-message.gatename.cm=mobile0025
-message.gatename.cm.spnumber=10660025
+#message.msgid=03251325236560000009
+message.gatename.cm=unicomgz_wxtl
+#message.gatename.cm=mobile0025
+#message.gatename.cm.spnumber=10660025
 message.gatename.cu=unicomgzDXYD
+message.gatename.ct=unicomgzDXYD
