--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -3,7 +3,7 @@ task.package.dir=D:/task/
 customer.export.temp.dir=D:/customer/
 sync.increment.cron=0 */1 * * * *
 remind.birthday.cron=0 0 1 * * *
-message.test.cron=0 */1 * * * *
+message.test.cron=0 0 0 * * *
 local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
 
