增加版本上传，增加GPS属性，修改短信发送网关

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -1,5 +1,6 @@
 temp.import.log.dir=D:/temp/
 task.package.dir=D:/task/
+version.upload.dir=D:/version/
 customer.export.temp.dir=D:/customer/
 sync.increment.cron=0 */1 * * * *
 remind.birthday.cron=0 0 1 * * *
