--- a/hermes/hermes-message/pom.xml
+++ b/hermes/hermes-message/pom.xml
@@ -33,6 +33,65 @@
 			<version>1.0</version>
 			<!-- <systemPath>${basedir}/lib/HXPUBAPI.jar</systemPath> -->
 		</dependency>
+
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>log4j-over-slf4j</artifactId>
+			<version>1.7.3</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.lxt2</groupId>
+			<artifactId>javaapi</artifactId>
+			<version>2.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.lxt2</groupId>
+			<artifactId>protocol   </artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.techcenter </groupId>
+			<artifactId>messagequeue      </artifactId>
+			<version>2.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.techcenter </groupId>
+			<artifactId>chain        </artifactId>
+			<version>2.0</version>
+		</dependency>
+		
+		
+		<dependency>
+			<groupId>com.techcenter </groupId>
+			<artifactId>util          </artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lxt2 </groupId>
+			<artifactId>codec          </artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.lxt2 </groupId>
+			<artifactId>common            </artifactId>
+			<version>2.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.mina </groupId>
+			<artifactId>mina-core             </artifactId>
+			<version>2.0.4</version>
+		</dependency>
+		
 		
 	</dependencies>
 
