--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -9,14 +9,28 @@ local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
 
 #\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
-message.ip=60.28.194.246
-message.name=Q3h2O6XY
-message.pass=ATN2XX5Y
-message.msgcode=15
-message.itemid=10253901
+
+cbip.loginName=xy3g
+cbip.password =123456
+cbip.serverIp =58.68.247.137
+cbip.serverPort = 1236
+cbip.clientId=9023
+cbip.productId=20406101
+
+
+
+#\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
+#message.ip=60.28.194.246
+#message.name=Q3h2O6XY
+#message.pass=ATN2XX5Y
+#message.msgcode=15
+#message.itemid=10253901
 #message.msgid=03251325236560000009
-message.gatename.cm=unicomgz_wxtl
+#message.gatename.cm=unicomgz_wxtl
 #message.gatename.cm=mobile0025
 #message.gatename.cm.spnumber=10660025
-message.gatename.cu=unicomgzDXYD
-message.gatename.ct=unicomgzDXYD
+#message.gatename.cu=unicomgzDXYD
+#message.gatename.ct=unicomgzDXYD
+
+
+
