--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -5,9 +5,17 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern= %d{yyyy-MM-dd HH:mm:ss SSS} %p [%c] - <%m>%n
 
+log4j.logger.com.source3g.hermes.service.LogService=INFO,LogService
+log4j.appender.LogService=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.LogService.File=logs/logService.log
+log4j.appender.Daily.DatePattern='.'yyyy-MM-dd
+log4j.appender.LogService.MaxFileSize=100MB
+log4j.appender.LogService.layout=org.apache.log4j.PatternLayout
+log4j.appender.LogService.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
+
 
 #
-log4j.logger.com.source3g=DEBUG, source3g
+log4j.logger.com.source3g=ERROR, source3g
 #log4j.logger.org.apache.commons.httpclient=DEBUG,valproxy
 
 
@@ -18,4 +26,4 @@ log4j.appender.source3g.MaxFileSize=100MB
 log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
 log4j.appender.source3g.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
 
-log4j.logger.org.springframework.web=DEBUG
+log4j.logger.org.springframework.web=ERROR
