--- a/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
+++ b/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,6 @@
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath*:spring/applicationContext*.xml</param-value>
 	</context-param>
-
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
 		<param-value>classpath*:log4j.properties</param-value>
@@ -36,6 +35,19 @@
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+	
+	<!-- <filter>
+		<filter-name>shiroAdminFilter</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetFilterLifecycle</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+	<filter-mapping>
+		<filter-name>shiroAdminFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping> -->
 
 	<!-- spring mvc -->
 	<servlet>
