修正 修改完成后不能再次修改的问题

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -24,6 +24,7 @@ message.channel.select=2
 message.ip=60.28.194.246
 message.name=Q3h2O6XY
 message.pass=ATN2XX5Y
+message.port=1
 message.msgcode=15
 message.itemid=10253901
 #message.msgid=03251325236560000009
