--- a/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
+++ b/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,25 @@
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
 
+
+
+	<filter>
+		<filter-name>authorFilter</filter-name>
+		<filter-class>com.source3g.hermes.admin.author.AuthorFilter</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>authorFilter</filter-name>
+		<url-pattern>/admin/*</url-pattern>
+	</filter-mapping>
+
+
+	<!-- <filter> <filter-name>shiroAdminFilter</filter-name> <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class> 
+		<init-param> <param-name>targetFilterLifecycle</param-name> <param-value>true</param-value> 
+		</init-param> </filter> <filter-mapping> <filter-name>shiroAdminFilter</filter-name> 
+		<url-pattern>/admin/*</url-pattern> </filter-mapping> -->
+
+
 	<!-- Shiro Security filter -->
 	<filter>
 		<filter-name>shiroFilter</filter-name>
@@ -35,19 +54,7 @@
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
-	<!-- <filter>
-		<filter-name>shiroAdminFilter</filter-name>
-		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-		<init-param>
-			<param-name>targetFilterLifecycle</param-name>
-			<param-value>true</param-value>
-		</init-param>
-	</filter>
-	<filter-mapping>
-		<filter-name>shiroAdminFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+
 
 	<!-- spring mvc -->
 	<servlet>
@@ -66,14 +73,8 @@
 	</servlet-mapping>
 
 	<!-- 浏览器不支持put,delete等method,由该filter将/blog?_method=delete转换为标准的http delete方法 -->
-<!-- 	<filter>
-		<filter-name>HiddenHttpMethodFilter</filter-name>
-		<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class>
-	</filter>
+	<!-- <filter> <filter-name>HiddenHttpMethodFilter</filter-name> <filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class> 
+		</filter> <filter-mapping> <filter-name>HiddenHttpMethodFilter</filter-name> 
+		<servlet-name>springMVC</servlet-name> </filter-mapping> -->
 
-	<filter-mapping>
-		<filter-name>HiddenHttpMethodFilter</filter-name>
-		<servlet-name>springMVC</servlet-name>
-	</filter-mapping> -->
-	
 </web-app>
