上传,版本,打包等的修改

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -2,6 +2,7 @@ temp.import.log.dir=D:/temp/
 task.package.dir=D:/task/
 version.upload.dir=D:/version/
 customer.export.temp.dir=D:/customer/
+error.report.dir=D:/errorLog/
 sync.increment.cron=0 */1 * * * *
 remind.birthday.cron=0 0 1 * * *
 message.test.cron=0 0 0 * * *
