--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.LogService.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS}
 
 
 #
-log4j.logger.com.source3g=ERROR, source3g
+log4j.logger.com.source3g=DEBUG, source3g
 #log4j.logger.org.apache.commons.httpclient=DEBUG,valproxy
 
 
