--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.logger.com.source3g=DEBUG, source3g
 
 
 log4j.appender.source3g=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.source3g.File=logs/log.log
+log4j.appender.source3g.File=${catalina.home}/logs/log.log
 log4j.appender.Daily.DatePattern='.'yyyy-MM-dd
 log4j.appender.source3g.MaxFileSize=100MB
 log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
@@ -23,7 +23,7 @@ log4j.logger.org.springframework.web=ERROR
 
 log4j.logger.com.source3g.hermes.service.LogService=INFO,LogService
 log4j.appender.LogService=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.LogService.File=logs/logService.log
+log4j.appender.LogService.File=${catalina.home}/logs/logService.log
 log4j.appender.LogService.MaxFileSize=100MB
 log4j.appender.LogService.layout=org.apache.log4j.PatternLayout
 log4j.appender.LogService.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
