登录界面修改,只给手机发短信

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -3,6 +3,10 @@ task.package.dir=D:/task/
 version.upload.dir=D:/version/
 customer.export.temp.dir=D:/customer/
 error.report.dir=D:/errorLog/
+
+#\u77ed\u4fe1\u76d1\u63a7\u95f4\u9694
+message.monitor.interval=10
+
 sync.increment.cron=0 */1 * * * *
 remind.birthday.cron=0 0 1 * * *
 message.test.cron=0 0 0 * * *
