去掉logback,修改小bug,修改日志保存的文件

--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -6,14 +6,14 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern= %d{yyyy-MM-dd HH:mm:ss SSS} %p [%c] - <%m>%n
 
 #
-log4j.logger.com.source3g=DEBUG, source3g
+log4j.category.com.source3g=DEBUG, source3g
 #log4j.logger.org.apache.commons.httpclient=DEBUG,valproxy
 
 
 log4j.appender.source3g=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.source3g.File=${catalina.home}/logs/log.log
 log4j.appender.Daily.DatePattern='.'yyyy-MM-dd
-log4j.appender.source3g.MaxFileSize=100MB
+#log4j.appender.source3g.maxFileSize=100MB
 log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
 log4j.appender.source3g.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
 
@@ -21,10 +21,9 @@ log4j.logger.org.springframework.web=ERROR
 
 
 
-log4j.logger.com.source3g.hermes.service.LogService=INFO,LogService
+log4j.category.com.source3g.hermes.service.LogService=DEBUG,LogService
 log4j.appender.LogService=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.LogService.File=${catalina.home}/logs/logService.log
-log4j.appender.LogService.MaxFileSize=100MB
+#log4j.appender.LogService.maxFileSize=100MB
 log4j.appender.LogService.layout=org.apache.log4j.PatternLayout
 log4j.appender.LogService.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
-
