--- a/hermes/hermes-web/src/main/resources/log4j.properties
+++ b/hermes/hermes-web/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.logger.com.source3g=DEBUG, source3g
 log4j.appender.source3g=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.source3g.File=${catalina.home}/logs/log.log
 log4j.appender.Daily.DatePattern='.'yyyy-MM-dd
-log4j.appender.source3g.MaxFileSize=100MB
+log4j.appender.source3g.maxFileSize=100MB
 log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
 log4j.appender.source3g.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
 
