--- a/hermes/hermes-message/pom.xml
+++ b/hermes/hermes-message/pom.xml
@@ -39,11 +39,11 @@
 			<artifactId>log4j-over-slf4j</artifactId>
 			<version>1.7.3</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.10</version>
-		</dependency>
+		</dependency> -->
 		
 		
 		<dependency>
