--- a/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
+++ b/hermes/hermes-web/src/main/webapp/WEB-INF/web.xml
@@ -54,7 +54,9 @@
 		<filter-name>shiroFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-
+	<session-config>
+		<session-timeout>30</session-timeout>
+	</session-config>
 
 	<!-- spring mvc -->
 	<servlet>
