--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -65,7 +65,12 @@
 		<dependency>
 			<groupId>com.source3g.hermes</groupId>
 			<artifactId>hermes-monitor</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.source3g.hermes</groupId>
+			<artifactId>hermes-api-common</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
