--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -23,7 +23,7 @@ log4j.logger.org.springframework.web=ERROR
 
 log4j.category.com.source3g.hermes.service.LogService=DEBUG,LogService
 log4j.appender.LogService=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.LogService.File=${catalina.home}/logs/logService.log
+log4j.appender.LogService.File=${catalina.home}/logs/operateLog.log
 #log4j.appender.LogService.maxFileSize=100MB
 log4j.appender.LogService.layout=org.apache.log4j.PatternLayout
 log4j.appender.LogService.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
