--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -1,9 +1,11 @@
 temp.import.log.dir=D:/temp/
+temp.import.sim.dir=D:/temp/sim/
 task.package.dir=D:/task/
 version.upload.dir=D:/version/
 customer.export.temp.dir=D:/customer/
 error.report.dir=D:/errorLog/
 image.menu.dir=D:/images/menu/
+
 
 #\u77ed\u4fe1\u76d1\u63a7\u95f4\u9694
 message.monitor.interval=10
