--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -42,5 +42,8 @@ message.gatename.cm=unicomgz_wxtl
 message.gatename.cu=unicomgzDXYD
 message.gatename.ct=unicomgzDXYD
 
+#\u8baf\u901a\u914d\u7f6e
+message.xuntong.username=123
+message.xuntong.password=123
 
 
