统计图API，短信重构，缓存使用mongodb，

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -11,7 +11,7 @@ image.menu.dir=D:/images/menu/
 message.monitor.interval=10
 
 sync.increment.cron=0 */1 * * * *
-remind.birthday.cron=0 0 1 * * *
+remind.birthday.cron=0 0 0 * * *
 message.test.cron=0 0 0 * * *
 local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
@@ -26,7 +26,9 @@ cbip.clientId=9023
 cbip.productId=20406101
 cbip.test=true
 
-message.channel.select=1
+message.channel=cbipMesssageService
+#cbipMesssageService
+#xuntongMessageService
 
 #\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
 message.ip=60.28.194.246
@@ -43,7 +45,7 @@ message.gatename.cu=unicomgzDXYD
 message.gatename.ct=unicomgzDXYD
 
 #\u8baf\u901a\u914d\u7f6e
-message.xuntong.username=123
-message.xuntong.password=123
+message.xuntong.username=xyw
+message.xuntong.password=xyw123456
 
 
