通话记录只显示拨入

--- a/hermes/hermes-api/src/main/resources/log4j.properties
+++ b/hermes/hermes-api/src/main/resources/log4j.properties
@@ -18,6 +18,7 @@ log4j.appender.source3g.layout=org.apache.log4j.PatternLayout
 log4j.appender.source3g.layout.ConversionPattern=  %d{yyyy-MM-dd HH:mm:ss SSS} %p [%t] [%c] - <%m>%n
 
 log4j.logger.org.springframework.web=ERROR
+log4j.logger.com.source3g.hermes.message.service.PositiveSenderService=ERROR
 
 log4j.logger.com.lxt2.javaapi=INFO
 
