--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -11,7 +11,7 @@ image.menu.dir=D:/images/menu/
 message.monitor.interval=10
 
 sync.increment.cron=0 */1 * * * *
-remind.birthday.cron=0 0 0 * * *
+remind.birthday.cron=0 0 1 * * *
 message.test.cron=0 0 0 * * *
 local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
@@ -26,7 +26,7 @@ cbip.clientId=9023
 cbip.productId=20406101
 cbip.test=true
 
-message.channel=cbipMesssageService
+message.channel=apiMessageService
 #cbipMesssageService
 #xuntongMessageService
 
@@ -48,4 +48,9 @@ message.gatename.ct=unicomgzDXYD
 message.xuntong.username=xyw
 message.xuntong.password=xyw123456
 
-
+#API\u77ed\u4fe1\u914d\u7f6e
+message.api.url=http://localhost:8888/sms/api/sms/send.htm
+message.api.youzhi.username=wcb
+message.api.youzhi.password=wcb123
+message.api.dichan.username=dc
+message.api.dichan.password=dc123
