--- a/hermes/hermes-message/pom.xml
+++ b/hermes/hermes-message/pom.xml
@@ -34,11 +34,11 @@
 			<!-- <systemPath>${basedir}/lib/HXPUBAPI.jar</systemPath> -->
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>log4j-over-slf4j</artifactId>
 			<version>1.7.3</version>
-		</dependency>
+		</dependency> -->
 		<!-- <dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
