--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -84,6 +84,15 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+					<groupId>org.apache.tomcat.maven</groupId>
+					<artifactId>tomcat7-maven-plugin</artifactId>
+					<version>2.1</version>
+					<configuration>
+						<uriEncoding>UTF-8</uriEncoding>
+					</configuration>
+				</plugin>
 		</plugins>
 	</build>
 
@@ -381,13 +390,6 @@
 
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-parent</artifactId>
-			<version>1.7.1</version>
-			<type>pom</type>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.1</version>
 			<type>jar</type>
@@ -398,7 +400,7 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.0.Final</version>
+			<version>4.1.0.Final</version>
 		</dependency>
 	</dependencies>
 
