短信状态回报

--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -50,6 +50,7 @@ message.xuntong.password=xyw123456
 
 #API\u77ed\u4fe1\u914d\u7f6e
 message.api.url=http://localhost:8888/sms/api/sms/send.htm
+message.api.recv.url=http://localhost:8888/sms/api/sms/report.htm
 message.api.youzhi.username=wcb
 message.api.youzhi.password=wcb123
 message.api.dichan.username=dc
