--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -10,21 +10,24 @@
 	<packaging>war</packaging>
 	<name>hermes-api</name>
 	<description>Hermes-api</description>
-	
-	
-	<properties><maven.tomcat.path>/hermes-api</maven.tomcat.path></properties>
+
+
+	<properties>
+		<maven.tomcat.path>/hermes-api</maven.tomcat.path>
+	</properties>
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!-- plugin>
+				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
 					<configuration>
 						<uriEncoding>UTF-8</uriEncoding>
 						<path>/hermes-api</path>
+						<port>8888</port>
 					</configuration>
-				</plugin-->
+				</plugin>
 
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
