--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -85,14 +85,14 @@
 				</configuration>
 			</plugin>
 			
-			<plugin>
+			<!-- <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
 					<configuration>
 						<uriEncoding>UTF-8</uriEncoding>
 					</configuration>
-				</plugin>
+				</plugin> -->
 		</plugins>
 	</build>
 
