--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -18,15 +18,20 @@
 	<build>
 		<pluginManagement>
 			<plugins>
+				<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId> 
+					<version>2.1</version> <configuration> <uriEncoding>UTF-8</uriEncoding> <path>/hermes-api</path> 
+					<port>8888</port> </configuration> </plugin> -->
 				<plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
+
 					<configuration>
 						<uriEncoding>UTF-8</uriEncoding>
 						<path>/hermes-api</path>
 						<port>8888</port>
 					</configuration>
+
 				</plugin>
 
 				<plugin>
