--- a/hermes/pom.xml
+++ b/hermes/pom.xml
@@ -85,14 +85,14 @@
 				</configuration>
 			</plugin>
 			
-			<!-- <plugin>
+			 <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
 					<configuration>
 						<uriEncoding>UTF-8</uriEncoding>
 					</configuration>
-				</plugin> -->
+				</plugin>
 		</plugins>
 	</build>
 
@@ -401,6 +401,12 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>4.1.0.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.9.5</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
