--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -11,7 +11,7 @@ image.menu.dir=D:/images/menu/
 message.monitor.interval=10
 
 sync.increment.cron=0 */1 * * * *
-remind.birthday.cron=0 */1 * * * *
+remind.birthday.cron=0 0 0 * * *
 message.test.cron=0 0 0 * * *
 local.url=http://localhost:8080/hermes-api/
 task.redelivery.count=3
