--- a/hermes/hermes-web/pom.xml
+++ b/hermes/hermes-web/pom.xml
@@ -86,6 +86,11 @@
 			<version>2.2</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>opensymphony</groupId>
+			<artifactId>sitemesh</artifactId>
+			<version>2.4.2</version>
+		</dependency>
 	</dependencies>
 
 
