--- a/hermes/hermes-api/src/main/resources/system.properties
+++ b/hermes/hermes-api/src/main/resources/system.properties
@@ -30,6 +30,8 @@ message.channel=apiMessageService
 #cbipMesssageService
 #xuntongMessageService
 
+message.send.thread.count=0
+
 #\u77ed\u4fe1\u53d1\u9001\u914d\u7f6e
 message.ip=60.28.194.246
 message.name=Q3h2O6XY
