--- a/hermes/hermes-api/pom.xml
+++ b/hermes/hermes-api/pom.xml
@@ -21,7 +21,7 @@
 				<!-- <plugin> <groupId>org.apache.tomcat.maven</groupId> <artifactId>tomcat7-maven-plugin</artifactId> 
 					<version>2.1</version> <configuration> <uriEncoding>UTF-8</uriEncoding> <path>/hermes-api</path> 
 					<port>8888</port> </configuration> </plugin> -->
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
@@ -32,7 +32,7 @@
 						<port>8888</port>
 					</configuration>
 
-				</plugin>
+				</plugin> -->
 
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
