--- a/hermes/hermes-api/src/main/resources/mongo.properties
+++ b/hermes/hermes-api/src/main/resources/mongo.properties
@@ -1,7 +1,7 @@
 mongo.host=localhost
 #mongo.host=58.68.229.178
 mongo.port=27017
-mongo.dbname=online0809
+mongo.dbname=online
 mongo.name=testmongo
 mongo.pass=1234
 #mongo.pass=5da6c87t2d!
