--- a/hermes/hermes-web/pom.xml
+++ b/hermes/hermes-web/pom.xml
@@ -114,7 +114,7 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<plugin>
+				<!-- <plugin>
 					<groupId>org.apache.tomcat.maven</groupId>
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.1</version>
@@ -122,7 +122,7 @@
 						<uriEncoding>UTF-8</uriEncoding>
 						<path>/hermes</path>
 					</configuration>
-				</plugin>
+				</plugin> -->
 
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
@@ -154,8 +154,6 @@
 						<downloadSources>true</downloadSources>
 						<downloadJavadocs>true</downloadJavadocs>
 					</configuration>
-
-
 				</plugin>
 
 				<plugin>
